add search public api for vehicles
